--- a/settings.json
+++ b/settings.json
@@ -1,15 +1,31 @@
 {
-    "Xres": 6.0, 
-    "Yres": 10.0,
-    "HomingOffset": [
-        -401.0, 
-        3100.0, 
-        130.0
-    ],  
     "ToolRadius": 12.5, 
-    "MaterialThickness": 100.0,
-    "BlockThickness": 100.0,
-    "HandlePosition": [0.15, 0.40, 0.6, 0.85],
-    "HandleHeight": [2, 2, 2, 2],
-    "HandleWidth": [2, 1, 1, 2]
+    "HandleHeight": [
+        3, 
+        2, 
+        2, 
+        3
+    ], 
+    "StepStringer": 6.0, 
+    "BlockThickness": 100.0, 
+    "HomingOffset": [
+        -407.0, 
+        3100.0, 
+        128.5
+    ], 
+    "HandleWidth": [
+        2, 
+        1, 
+        1, 
+        2
+    ], 
+    "Xres": 6.0, 
+    "FeedrateStringer": 1700, 
+    "Yres": 6.0, 
+    "HandlePosition": [
+        0.2, 
+        0.4, 
+        0.6, 
+        0.8
+    ]
 }
